--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,7 +3,7 @@
   <!-- Checkbox Column -->
   <ng-container matColumnDef="select">
     <th mat-header-cell *matHeaderCellDef>
-      <mat-checkbox (change)="$event ? toggleAllRows() : null"
+      <mat-checkbox (change)=" toggleAllRows()"
                     [checked]="selection.hasValue() && isAllSelected()"
                     [indeterminate]="selection.hasValue() && !isAllSelected()"
                     [aria-label]="checkboxLabel()">
@@ -13,6 +13,8 @@
       <mat-checkbox (click)="$event.stopPropagation()"
                     [disabled]="isCheckboxDisabled(row)"
                     (change)="toggleCheckbox(row,$event)"
+                    [checked]="isChecked(row)"
+                    [ngClass]="{'disabled-checkbox':row.completed}"
                     [aria-label]="checkboxLabel(row)">
 
       </mat-checkbox>
@@ -30,7 +32,7 @@
   <!-- Weight Column -->
   <ng-container matColumnDef="status">
     <th mat-header-cell *matHeaderCellDef> Status </th>
-    <td mat-cell *matCellDef="let element"> {{element.completed}} </td>
+    <td mat-cell *matCellDef="let element"> {{ element.completed ? 'Completed' : 'Pending' }} </td>
   </ng-container>
 
   <!-- Symbol Column -->
@@ -49,3 +51,9 @@
       (click)="selection.toggle(row)">
   </tr>
 </table>
+@if(isLoading)
+{
+  <mat-spinner [ngClass]="'spinner'"></mat-spinner>
+}
+
+
